# primecyc-app

./: .gitignore  CMakeLists.txt  README.md  dev-mote.md
benchmark/: CMakeLists.txt  benchmark.cpp
examples/: CMakeLists.txt  avx512test.cpp  benchpoly.cpp  benchtransform.cpp  cyc-reduction.cpp  tensor.cpp  testavx.cpp  trans.cpp
include/: bdf17scheme-impl.h  bdf17scheme.h  dkms23scheme-impl.h  dkms23scheme.h  params.h  rlwe-impl.h  rlwe.h
scripts/: bdf17-gen.sage  bdf17-new-gen.sage  lastprime.sage  params-gen.sage  plot.py  primes-gen.sage
src/: CMakeLists.txt  bdf17-new.cpp  bdf17.cpp  dkms23.cpp  main.cpp
tests/: CMakeLists.txt
